[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Game.gd" type="Script" id=3]
[ext_resource path="res://Scenes/LayerManagerManager.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/DeathScene.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/Fonts/alba/ALBA____.TTF" type="DynamicFontData" id=8]

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 8 )

[node name="Game" type="Spatial"]
script = ExtResource( 3 )
level_threshold = 4

[node name="Player" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.36126, 4.05243, 9.28789 )
collision_mask = 3
power = 0
level = 1

[node name="LayerManagerManager" parent="." instance=ExtResource( 5 )]

[node name="DeathScene" parent="." instance=ExtResource( 7 )]

[node name="Pause" type="Control" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="Pause"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="Pause/ColorRect"]
anchor_top = 0.333
anchor_right = 1.0
anchor_bottom = 0.462
margin_top = 0.199997
margin_bottom = 23.8
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
text = "PAUSED"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Pause/ColorRect"]
anchor_left = 0.35
anchor_top = 0.584
anchor_right = 0.65
anchor_bottom = 0.698
margin_left = -0.400024
margin_top = 0.200012
margin_right = 0.399963
margin_bottom = 0.199982
alignment = 1

[node name="ResumeButton" type="Button" parent="Pause/ColorRect/HBoxContainer"]
margin_right = 307.0
margin_bottom = 68.0
size_flags_horizontal = 3
text = "Resume"

[node name="PauseButton" type="Button" parent="Pause"]
anchor_left = 0.9
anchor_right = 1.0
margin_left = -12.0
margin_bottom = 20.0
text = "Pause"

[node name="CountdownTimer" type="Control" parent="."]
anchor_right = 1.0

[node name="Label" type="Label" parent="CountdownTimer"]
margin_right = 40.0
margin_bottom = 14.0

[node name="Timer" type="Timer" parent="CountdownTimer"]
wait_time = 10.0
one_shot = true
autostart = true

[connection signal="paused" from="." to="Player" method="_on_Game_paused"]
[connection signal="resumed" from="." to="Player" method="_on_Game_resumed"]
[connection signal="death" from="Player" to="." method="_on_Player_death"]
[connection signal="death" from="Player" to="DeathScene" method="_on_Player_death"]
[connection signal="level_up" from="Player" to="." method="_on_Player_level_up"]
[connection signal="level_up" from="Player" to="LayerManagerManager" method="_on_Player_level_up"]
[connection signal="continued" from="DeathScene" to="." method="_on_DeathScene_continued"]
[connection signal="pressed" from="Pause/ColorRect/HBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="Pause/PauseButton" to="." method="_on_PauseButton_pressed"]
[connection signal="timeout" from="CountdownTimer/Timer" to="Player" method="_on_Timer_timeout"]
